myK8S/miniflux/miniflux-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:latest
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          ports:
            - containerPort: 8080
