myK8S/miniflux/miniflux-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux-postgres
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux-postgres
  template:
    metadata:
      labels:
        app: miniflux-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: miniflux-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux-postgres
  namespace: personal
spec:
  selector:
    app: miniflux-postgres
  ports:
    - port: 5432
      targetPort: 5432
