myK8S/miniflux/miniflux-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux-svc
  namespace: personal
spec:
  selector:
    app: miniflux
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
