myK8S/miniflux/miniflux-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux-ingress
  namespace: personal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-cf"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "rss.${BASE_DOMAIN}"
      secretName: miniflux-tls-secret
  rules:
    - host: "rss.${BASE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux-svc
                port:
                  number: 8080
